src/content/docs/ja/sdk/android/v4/features/short-links.mdx
---
title: "ショートブランドリンクを解析"
description: "Campaign Labで作成された短縮リンクを解析します。"
slug: "en/sdk/android/v4/features/short-links"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v5: "/en/sdk/android/features/short-links"
---
Adjustの[リンク短縮ソリューション](https://help.adjust.com/en/article/short-branded-links)は、複雑で長いリンクをより簡潔で短いリンクに変換します。短縮リンクはディープリンクとキャンペーン情報を保持し、アプリがインストールされていない場合は、ユーザーをApp Storeに誘導します。

このセクションで説明するメソッドを使用して、短縮リンクを解析します。

Adjust SDKでディープリンクを設定する \{\#set\-up\-deep\-linking\-in\-the\-adjust\-sdk\}
------------------------------------------------------------------------------------

Adjust SDKに、以下のサポートを追加してください。

* [URIスキーム](/en/sdk/android/features/deep-links)
* [ディファードディープリンク](/en/sdk/android/features/deep-links#deferred-deep-linking)

<callout type="note"> 

Adjustのリンク短縮ソリューションを使用するために、[リンクの解決](/en/sdk/android/features/deep-links#link-resolution)を設定する必要はありません。
</Callout> 

Adjust SDKを設定して短縮リンクを解析する \{\#set\-up\-the\-adjust\-sdk\-to\-resolve\-short\-links\}
-----------------------------------------------------------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```java
public static void processDeeplink(Uri url, Context context, OnDeeplinkResolvedListener callback)
```

</CodeBlock> 

Adjust SDKは、`onCreate`または`onNewIntent`メソッドを使ってアクティビティ内のintentオブジェクトにディープリンク情報を送信します。ディープリンクは、 `intent`オブジェクトの`data`プロパティで利用可能です。アプリが起動し、これらのメソッドのいずれかが起動すれば、ディープリンクにアクセスできます。`processDeeplink`メソッドを呼び出して、ディープリンクでユーザーをアプリに誘導した短縮AdjustリンクURLを解析します。
<tabs> <tab title="Kotlin" sync="kotlin"> 

```kotlin
override fun onCreate(savedInstanceState: Bundle?) {
   super.onCreate(savedInstanceState)
   setContentView(R.layout.activity_main)

   val intent = intent
   val webpageURL = intent.data
   Adjust.processDeeplink(webpageURL, this) { resolvedLink ->
      // resolvedLink contains either resolved URL (if it was unshortened)
      // or just echoed URL if it was not shortened
      Log.d("Example", resolvedLink)
   }
}
```

</Tab> <tab title="Java" sync="java"> 

```java
@Override
protected void onCreate(Bundle savedInstanceState) {
   super.onCreate(savedInstanceState);
   setContentView(R.layout.activity_main);

   Intent intent = getIntent();
   Uri webpageURL = intent.getData();
   Adjust.processDeeplink(webpageURL, this, new   OnDeeplinkResolvedListener() {
      @Override
      public void onDeeplinkResolved(String resolvedLink) {
            // resolvedLink contains either resolved URL (if it was unshortened)
            // or just echoed URL if it was not shortened
            Log.d("Example", resolvedLink);
      }
   });
}
```

</Tab> </Tabs> <tabs> <tab title="Kotlin" sync="kotlin"> 

```kotlin
override fun onNewIntent(intent: Intent?) {
   super.onNewIntent(intent)

   val webpageURL = intent.data
   Adjust.processDeeplink(webpageURL, this) { resolvedLink ->
      // resolvedLink contains either resolved URL (if it was unshortened)
      // or just echoed URL if it was not shortened
      Log.d("Example", resolvedLink)
   }
}
```

</Tab> <tab title="Java" sync="java"> 

```java
@Override
protected void onNewIntent(Intent intent) {
   super.onNewIntent(intent);

   Uri webpageURL = intent.getData();
   Adjust.processDeeplink(webpageURL, this, new   OnDeeplinkResolvedListener() {
      @Override
      public void onDeeplinkResolved(String resolvedLink) {
            // resolvedLink contains either resolved URL (if it was unshortened)
            // or just echoed URL if it was not shortened
            Log.d("Example", resolvedLink);
      }
   });
}
```

</Tab> </Tabs> 

`processDeeplink`メソッドに送信したリンクが短縮されていた場合、 `resolvedLink`は拡張された元のリンクを返します。メソッドにパスしたリンクが短縮されていない場合、 `resolvedLink`にはパスした同じリンクが含まれます。

