src/content/docs/ja/sdk/android/v5/features/short-links.mdx
---
title: "ショートブランドリンクを解析"
description: "Campaign Labで作成された短縮リンクを解析します。"
slug: "en/sdk/android/features/short-links"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v4: "/en/sdk/android/v4/features/short-links"
---
Adjustの[リンク短縮ソリューション](https://help.adjust.com/en/article/short-branded-links)は、複雑で長いリンクをより簡潔で短いリンクに変換します。短縮リンクはディープリンクとキャンペーン情報を保持し、アプリがインストールされていない場合は、ユーザーをApp Storeに誘導します。

このセクションで説明するメソッドを使用して、短縮リンクを解析します。

Adjust SDKでディープリンクを設定する \{\#set\-up\-deep\-linking\-in\-the\-adjust\-sdk\}
------------------------------------------------------------------------------------

Adjust SDKに、以下のサポートを追加してください。

* [URIスキーム](/en/sdk/android/features/deep-links)
* [ディファードディープリンク](/en/sdk/android/features/deep-links#deferred-deep-linking)

<callout type="note"> 

Adjustのリンク短縮ソリューションを使用するために、[リンクの解決](/en/sdk/android/features/deep-links#link-resolution)を設定する必要はありません。
</Callout> 

Adjust SDKを設定して短縮リンクを解析する \{\#set\-up\-the\-adjust\-sdk\-to\-resolve\-short\-links\}
-----------------------------------------------------------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```java
public static void processAndResolveDeeplink(Uri url, Context context, OnDeeplinkResolvedListener callback)
```

</CodeBlock> 

Adjust SDKは、`onCreate`または`onNewIntent`メソッドを使ってアクティビティ内のintentオブジェクトにディープリンク情報を送信します。ディープリンクは、 `intent`オブジェクトの`data`プロパティで利用可能です。アプリが起動し、これらのメソッドのいずれかが起動すれば、ディープリンクにアクセスできます。`processAndResolveDeeplink`メソッドを呼び出して、ディープリンクでユーザーをアプリに誘導した短縮AdjustリンクURLを解析します。
<tabs> <tab title="Kotlin" sync="kotlin"> 

```kotlin
override fun onCreate(savedInstanceState: Bundle?) {
   super.onCreate(savedInstanceState)
   setContentView(R.layout.activity_main)

   val intent = intent
   val webpageURL = intent.data
   val adjustDeeplink = AdjustDeeplink(webpageURL)
   Adjust.processAndResolveDeeplink(adjustDeeplink, this) { resolvedLink ->
      // resolvedLink contains either resolved URL (if it was unshortened)
      // or just echoed URL if it was not shortened
      Log.d("Example", resolvedLink)
   }
}
```

</Tab> <tab title="Java" sync="java"> 

```java
@Override
protected void onCreate(Bundle savedInstanceState) {
   super.onCreate(savedInstanceState);
   setContentView(R.layout.activity_main);

   Intent intent = getIntent();
   Uri webpageURL = intent.getData();
   AdjustDeeplink adjustDeeplink = new AdjustDeeplink(webpageURL);
   Adjust.processAndResolveDeeplink(adjustDeeplink, this, new   OnDeeplinkResolvedListener() {
      @Override
      public void onDeeplinkResolved(String resolvedLink) {
            // resolvedLink contains either resolved URL (if it was unshortened)
            // or just echoed URL if it was not shortened
            Log.d("Example", resolvedLink);
      }
   });
}
```

</Tab> </Tabs> <tabs> <tab title="Kotlin" sync="kotlin"> 

```kotlin
override fun onNewIntent(intent: Intent?) {
   super.onNewIntent(intent)

   val webpageURL = intent.data
   val adjustDeeplink = AdjustDeeplink(webpageURL)
   Adjust.processAndResolveDeeplink(adjustDeeplink, this) { resolvedLink ->
      // resolvedLink contains either resolved URL (if it was unshortened)
      // or just echoed URL if it was not shortened
      Log.d("Example", resolvedLink)
   }
}
```

</Tab> <tab title="Java" sync="java"> 

```java
@Override
protected void onNewIntent(Intent intent) {
   super.onNewIntent(intent);

   Uri webpageURL = intent.getData();
   AdjustDeeplink adjustDeeplink = new AdjustDeeplink(webpageURL);
   Adjust.processAndResolveDeeplink(adjustDeeplink, this, new   OnDeeplinkResolvedListener() {
   @Override
   public void onDeeplinkResolved(String resolvedLink) {
            // resolvedLink contains either resolved URL (if it was unshortened)
            // or just echoed URL if it was not shortened
            Log.d("Example", resolvedLink);
   }
   });
}
```

</Tab> </Tabs> 

`processAndResolveDeeplink`メソッドに送信したリンクが短縮されていた場合、 `resolvedLink`は拡張された元のリンクを返します。メソッドにパスしたリンクが短縮されていない場合、 `resolvedLink`にはパスした同じリンクが含まれます。

リファラーを使用したディープリンクを処理する\{\#handling\-deeplinks\-with\-referrer\}
---------------------------------------------------------------------

オプションのリファラーURLは、ディープリンクやアプリのソースを計測して、より正確なアトリビューションやリアトリビューション、ディープリンクを実現するために使用されます。例えば、SEOやオーガニック検索、Adjustリンクなどのチャネルには直接使用されません。クライアントのルートドメインでAndroidアプリリンクが実装されており、それによってアプリが起動する場合、そのチャネルでは、ユーザーのアトリビューションまたはリアトリビューションを行うために、リファラーURLから得られるシグナルに依存する場合があります。

#### リファラーURLを設定する

<tabs> <tab title="Kotlin" sync="kotlin"> 

```kotlin
override fun onNewIntent(intent: Intent?) {
   super.onNewIntent(intent)

   val webpageURL = intent.data
   val adjustDeeplink = AdjustDeeplink(webpageURL)
   val referrer = getReferrer() //Activity#getReferrer()
   referrer?.let {
      adjustDeeplink.setReferrer(referrer)
   }
   Adjust.processAndResolveDeeplink(adjustDeeplink, this) { resolvedLink ->
      // resolvedLink contains either resolved URL (if it was unshortened)
      // or just echoed URL if it was not shortened
      Log.d("Example", resolvedLink)
   }
}
```

</Tab> <tab title="Java" sync="java"> 

```java
@Override
protected void onNewIntent(Intent intent) {
   super.onNewIntent(intent);

   Uri webpageURL = intent.getData();
   AdjustDeeplink adjustDeeplink = new AdjustDeeplink(webpageURL);
    // If referrer URL is available, add it to the deeplink object
    Uri referrer = getReferrer(); //Activity#getReferrer()
    if (referrer != null) {
        adjustDeeplink.setReferrer(referrer);
    }
   Adjust.processAndResolveDeeplink(adjustDeeplink, this, new   OnDeeplinkResolvedListener() {
   @Override
   public void onDeeplinkResolved(String resolvedLink) {
         // resolvedLink contains either resolved URL (if it was unshortened)
         // or just echoed URL if it was not shortened
         Log.d("Example", resolvedLink);
   }
   });
}
```

</Tab> </Tabs>

